--- a/index.html
+++ b/index.html
@@ -21,11 +21,23 @@
             <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that
                 work.That's why I am learning and mastering web development. I will not stop until I become the Web
                 Development Hero.</p>
-            <a class="button" target="blank" href="#">HIRE ME</a>
+            <a class="button" target="_blank" href="#">HIRE ME</a>
         </div>
 
         <div class="half-width">
             <img src="images/muzahid.png" alt="">
+        </div>
+    </section>
+
+    <section class="dream-big">
+        <div class="half-width">
+            <img src="images/M02.jpg" alt="">
+        </div>
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <h3>Become a web developer</h3>
+            <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+            <a class="button" target="_blank" href="#">DOWNLOAD RESUME</a>
         </div>
     </section>
 </body>
